--- a/.github/workflows/weekly-full-db-dump.yml
+++ b/.github/workflows/weekly-full-db-dump.yml
@@ -1,8 +1,7 @@
 name: weekly-full-db-dump
-
 on:
   schedule:
-    - cron: "0 3 * * 1"    # Mondays at 03:00 UTC
+    - cron: "0 3 * * 1"
   workflow_dispatch:
 
 jobs:
@@ -15,28 +14,23 @@ jobs:
       - name: Full dump via Docker (Postgres 17)
         env:
           PGPASSWORD: ${{ secrets.DB_PASSWORD_SUPER }}
-          DB_HOST: ${{ secrets.DB_HOST }}
-          DB_NAME: ${{ secrets.DB_NAME }}
-          DB_USER: ${{ secrets.DB_USER }}
-          DB_PORT: ${{ secrets.DB_PORT || '5432' }}
-          DB_SSLMODE: ${{ secrets.DB_SSLMODE || 'require' }}
+          DB_HOST:     ${{ secrets.DB_HOST }}
+          DB_NAME:     ${{ secrets.DB_NAME }}
+          DB_USER:     ${{ secrets.DB_USER }}
+          DB_PORT:     ${{ secrets.DB_PORT || '5432' }}
+          DB_SSLMODE:  ${{ secrets.DB_SSLMODE || 'require' }}
         run: |
-          run: |
-  set -euo pipefail
+          set -euo pipefail
+          echo "▶ Using Host=$DB_HOST Port=$DB_PORT DB=$DB_NAME User=$DB_USER SSL=$DB_SSLMODE"
 
-  SSLMODE="${DB_SSLMODE:-require}"
-  echo "▶ Using Host=$DB_HOST Port=$DB_PORT User=$DB_USER SSL=$SSLMODE"
-  echo "▶ Probing connection…"
+          # Quick auth probe
+          docker run --rm -e PGPASSWORD="$PGPASSWORD" postgres:17-alpine \
+            psql "host=$DB_HOST port=$DB_PORT user=$DB_USER dbname=$DB_NAME sslmode=$DB_SSLMODE" \
+            -c "select current_user, current_database(), now();"
 
-  docker run --rm -e PGPASSWORD="$PGPASSWORD" postgres:17-alpine \
-    psql "host=$DB_HOST port=$DB_PORT user=$DB_USER dbname=postgres sslmode=$SSLMODE" \
-    -c "select current_user as user, now() as ts;"
+          # Build URI and dump
+          DB_URI="postgresql://${DB_USER}:${PGPASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}?sslmode=${DB_SSLMODE}"
+          docker run --rm -e PGPASSWORD="$PGPASSWORD" -e DB_URI="$DB_URI" postgres:17-alpine \
+            sh -c 'pg_dump --dbname="$DB_URI" -F c -v' > dump_$(date -u +%Y%m%d).sqlc
 
-  echo "▶ Listing non-template databases:"
-  docker run --rm -e PGPASSWORD="$PGPASSWORD" postgres:17-alpine \
-    psql "host=$DB_HOST port=$DB_PORT user=$DB_USER dbname=postgres sslmode=$SSLMODE" \
-    -tAc "select datname from pg_database where datistemplate = false order by 1;"
-
-  echo "❗ Update your repository secret DB_NAME to one of the names listed above, then re-run."
-  exit 1
-
+          ls -lh dump_*.sqlc
