--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: deploy
 on:
   push:
     branches:
-      - web/add-virdato-web     # or 'main' after you merge the web app
+      - web/add-virdato-web
     paths:
       - 'virdato-web/**'
       - '.github/workflows/deploy.yml'
@@ -14,21 +14,34 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: virdato-web   # <<< run inside the Next app
+        working-directory: virdato-web   # ensure we build from the right folder
 
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Node
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
           cache-dependency-path: 'virdato-web/package-lock.json'
 
-      - name: Install deps
-        run: npm install                  # <<< NOT npm ci
+      - name: Install dependencies
+        run: npm install
 
-      - name: Build
+      - name: Build app
         run: npm run build
+
+      # Optional: If you use Vercel GitHub integration, stop here.
+      # If you manually deploy from GitHub, uncomment the next lines
+      # and make sure you’ve added these secrets:
+      # VERCEL_TOKEN, VERCEL_ORG_ID, VERCEL_PROJECT_ID.
+
+      # - name: Deploy to Vercel
+      #   uses: amondnet/vercel-action@v25
+      #   with:
+      #     vercel-token: ${{ secrets.VERCEL_TOKEN }}
+      #     vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
+      #     vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
+      #     working-directory: virdato-web
