--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-            node-version: '20'
-            cache: 'none'              # keep simple; add caching later if you want
+          node-version: '20'           # remove cache: none (not supported)
 
       - name: Show files (sanity)
         run: |
@@ -34,8 +33,9 @@ jobs:
           ls -la
           test -f package.json || (echo "No package.json in repo root" && exit 1)
 
+      # Use npm ci for reproducible installs in CI (requires package-lock.json)
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Build app
         run: npm run build
