--- a/package.json
+++ b/package.json
@@ -13,21 +13,19 @@
     "smoke": "tsx src/db/smoke.ts"
   },
   "dependencies": {
-    "next": "14.2.5",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-
+    "@magic-sdk/admin": "^2.6.0",
+    "@sentry/nextjs": "10.15.0",
+    "@supabase/supabase-js": "^2.45.0",
+    "@upstash/redis": "^1.35.6",
+    "drizzle-orm": "^0.44.5",
     "ethers": "^6.13.0",
     "magic-sdk": "^18.6.0",
-    "@magic-sdk/admin": "^2.6.0",
-
-    "@supabase/supabase-js": "^2.45.0",
-    "drizzle-orm": "^0.44.5",
+    "next": "14.2.5",
     "postgres": "^3.4.7",
     "posthog-js": "^1.268.6",
     "posthog-node": "^5.9.1",
-
-    "@sentry/nextjs": "10.15.0"
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.30",
