--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   },
   "dependencies": {
     "@magic-sdk/admin": "^2.6.0",
+    "@rainbow-me/rainbowkit": "^2.2.10",
     "@sentry/nextjs": "10.15.0",
     "@supabase/supabase-js": "^2.45.0",
+    "@tanstack/react-query": "^5.59.20",
     "@upstash/redis": "^1.35.6",
     "drizzle-orm": "^0.44.5",
     "ethers": "^6.13.0",
@@ -25,7 +27,9 @@
     "posthog-js": "^1.268.6",
     "posthog-node": "^5.9.1",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "viem": "^2.21.4",
+    "wagmi": "^2.12.7"
   },
   "devDependencies": {
     "@types/node": "^20.11.30",
