--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "drizzle-orm": "^0.44.5",
     "ethers": "^6.13.0",
     "magic-sdk": "^18.6.0",
-    "next": "14.2.5",
+    "next": "^14.2.35",
     "postgres": "^3.4.7",
     "posthog-js": "^1.268.6",
     "posthog-node": "^5.9.1",
