--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
     "smoke": "tsx src/db/smoke.ts"
   },
   "dependencies": {
-    "@magic-sdk/admin": "^2.6.0",
+    "@magic-sdk/admin": "^2.8.2",
     "@rainbow-me/rainbowkit": "^2.2.10",
     "@sentry/nextjs": "10.15.0",
-    "@supabase/supabase-js": "^2.45.0",
+    "@supabase/auth-helpers-nextjs": "^0.15.0",
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.90.1",
     "@tanstack/react-query": "^5.59.20",
     "@upstash/redis": "^1.35.6",
     "drizzle-orm": "^0.44.5",
     "ethers": "^6.13.0",
     "magic-sdk": "^18.6.0",
     "next": "^14.2.35",
+    "pino-pretty": "^13.1.3",
     "postgres": "^3.4.7",
     "posthog-js": "^1.268.6",
     "posthog-node": "^5.9.1",
