--- a/.github/workflows/ci-contracts.yml
+++ b/.github/workflows/ci-contracts.yml
@@ -7,7 +7,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: foundry-rs/foundry-toolchain@v1
         with: { version: nightly }
-      - name: Install OZ
+      - name: Install deps (Foundry)
         working-directory: contracts
         run: forge install OpenZeppelin/openzeppelin-contracts@v5.0.2
       - name: Build
