--- a/.github/workflows/foundry.yml
+++ b/.github/workflows/foundry.yml
@@ -17,17 +17,11 @@ jobs:
 
       - name: Install dependencies (forge-std + OZ)
         run: |
-          forge install foundry-rs/forge-std --no-commit
-          forge install OpenZeppelin/openzeppelin-contracts --no-commit
-
-      - name: Show repo layout (debug)
-        run: |
-          ls -la
-          ls -la lib || true
-          ls -la contracts || true
-          ls -la contracts/src || true
-          ls -la test || true
+          rm -rf lib
+          forge install foundry-rs/forge-std
+          forge install OpenZeppelin/openzeppelin-contracts
+          # prevent any submodule/commit expectations
+          rm -rf lib/**/.git
 
       - name: Run tests
         run: forge test -vv
-
