Phase 5: mainnet deploy package (manifests + deploy script + checklist)

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
+# RPC (mainnet or chosen L2)
 RPC_URL=
-CHAIN_ID=11155111
 PRIVATE_KEY=
-ETHERSCAN_API_KEY=
-COVALENT_API_KEY=
-WEB3_STORAGE_TOKEN=
-COINGECKO_API=
-PUSH_SENDER_KEY=
+
+# DAO & Treasury (Safe)
+DAO_SAFE=
+TREASURY_SAFE=
+
+# Token
+VIRD_TOKEN_ADDRESS=
